@@ -28,9 +28,9 @@ project(bctoolbox)
 
 set(BCTOOLBOX_VERSION_MAJOR 0)
 set(BCTOOLBOX_VERSION_MINOR 5)
-set(BCTOOLBOX_VERSION_PATCH 0)
-set(BCTOOLBOX_SO_VERSION 0)
-set(BCTOOLBOXTESTER_SO_VERSION 0)
+set(BCTOOLBOX_VERSION_PATCH 1)
+set(BCTOOLBOX_SO_VERSION 1)
+set(BCTOOLBOXTESTER_SO_VERSION 1)
 
 set(BCTOOLBOX_VERSION "${BCTOOLBOX_VERSION_MAJOR}.${BCTOOLBOX_VERSION_MINOR}.${BCTOOLBOX_VERSION_PATCH}")
 set(PROJECT_VERSION_MAJOR ${BCTOOLBOX_VERSION_MAJOR})
